--- a/package.json
+++ b/package.json
@@ -15,11 +15,11 @@
     "react-scripts": "3.4.1"
   },
   "scripts": {
-    "start": "react-scripts start",
-    "build": "react-scripts build",
+    "build": "react-scripts build && cd backend && npm install",
+    "start": "cd backend && nodemon server",
     "test": "react-scripts test",
     "eject": "react-scripts eject",
-    "heroku-postbuild": "npm install && npm run build"
+    "heroku-postbuild": "NPM_CONFIG_PRODUCTION=false npm install --prefix client && npm run build --prefix client" 
   },
   "eslintConfig": {
     "extends": "react-app"
