--- a/package.json
+++ b/package.json
@@ -15,10 +15,10 @@
     "react-scripts": "3.4.1"
   },
   "scripts": {
-    "build": "react-scripts build && cd backend && npm install",
-    "start": "cd backend && nodemon server",
+    "start": "react-scripts start",
+    "build": "react-scripts build",
     "test": "react-scripts test",
-    "eject": "react-scripts eject",
+    "eject": "react-scripts eject"
   },
   "eslintConfig": {
     "extends": "react-app"
